syntax = "proto3";

package bc;

message ProtoHash {
  fixed64 v0 = 1;
  fixed64 v1 = 2;
  fixed64 v2 = 3;
  fixed64 v3 = 4;
}

message ProtoAssetID {
  ProtoHash hash = 1;
}

message ProtoAssetAmount {
  ProtoAssetID asset_id = 1;
  uint64       amount   = 2;
}

message AssetDefinition {
  ProtoHash initial_block_id = 1;
  Program   issuance_program = 2;
  ProtoHash data             = 3;
}

message ValueSource {
  ProtoHash        ref      = 1;
  ProtoAssetAmount value    = 2;
  uint64           position = 3;
}

message ValueDestination {
  ProtoHash        ref      = 1;
  ProtoAssetAmount value    = 2;
  uint64           position = 3;
}

message Program {
  uint64 vm_version = 1;
  bytes  code       = 2;
}

message BlockHeaderEntry {
  message Body {
    uint64    version                = 1;
    uint64    height                 = 2;
    ProtoHash previous_block_id      = 3;
    uint64    timestamp_ms           = 4;
    ProtoHash transactions_root      = 5;
    ProtoHash assets_root            = 6;
    bytes     next_consensus_program = 7;
    ProtoHash ext_hash               = 8;
  }
  message Witness {
    repeated bytes arguments = 1;
  }
  Body    body    = 1;
  Witness witness = 2;
}

message TxHeader {
  message Body {
    uint64             version     = 1;
    repeated ProtoHash result_ids  = 2;
    ProtoHash          data        = 3;
    uint64             min_time_ms = 4;
    uint64             max_time_ms = 5;
    ProtoHash          ext_hash    = 6;
  }
  Body body = 1;
}

message Mux {
  message Body {
    repeated ValueSource sources  = 1; // issuances, spends, and muxes
    Program              program  = 2;
    bytes                ext_hash = 3;
  }
  message Witness {
    repeated ValueDestination destinations = 1; // outputs, retirements, and muxes
    repeated bytes            arguments    = 2;
  }
  Body    body    = 1;
  Witness witness = 2;
}

message Nonce {
  message Body {
    Program   program       = 1;
    ProtoHash time_range_id = 2;
    ProtoHash ext_hash      = 3;
  }
  message Witness {
    repeated bytes arguments   = 1;
    ProtoHash      anchored_id = 2;
  }
  Body    body    = 1;
  Witness witness = 2;
}

message Output {
  message Body {
    ValueSource source          = 1;
    Program     control_program = 2;
    ProtoHash   data            = 3;
    ProtoHash   ext_hash        = 4;
  }
  Body body = 1;
}

message Retirement {
  message Body {
    ValueSource source   = 1;
    ProtoHash   data     = 2;
    ProtoHash   ext_hash = 3;
  }
  Body body = 1;
}

message TimeRange {
  message Body {
    uint64    min_time_ms = 1;
    uint64    max_time_ms = 2;
    ProtoHash ext_hash    = 3;
  }
  Body body = 1;
}

message Issuance {
  message Body {
    ProtoHash        anchor_id = 1;
    ProtoAssetAmount value     = 2;
    ProtoHash        data      = 3;
    ProtoHash        ext_hash  = 4;
  }
  message Witness {
    ValueDestination destination      = 1;
    AssetDefinition  asset_definition = 2;
    repeated bytes   arguments        = 3;
    ProtoHash        anchored_id      = 4;
  }
  Body    body    = 1;
  Witness witness = 2;
}

message Spend {
  message Body {
    ProtoHash spent_output_id = 1;
    ProtoHash data            = 2;
    ProtoHash ext_hash        = 3;
  }
  message Witness {
    ValueDestination destination = 1;
    repeated bytes   arguments   = 2;
    ProtoHash        anchored_id = 3;
  }
  Body    body    = 1;
  Witness witness = 2;
}
